--- a/public/stylesheets/web-app-theme/override.css
+++ b/public/stylesheets/web-app-theme/override.css
@@ -7,6 +7,10 @@ html,body {
     color:#333
 }
 
+#main .block .content h2 {
+    margin-left: 0;
+ 
+}
 div .workouttitle{
     font-size: 150%;
     margin-bottom: 30px;
